ingress/adminer-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: myinvest
    tier: adminer
  name: adminer
spec:
  ports:
  - name: "8080"
    port: 8080
    protocol: TCP
  selector:
    app: myinvest
    tier: adminer
  type: ClusterIP
status:
  loadBalancer: {}
