ingress/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: myinvest
    tier: backend
  name: backend
spec:
  ports:
  - name: "3000"
    protocol: TCP
    port: 3000
  type: ClusterIP
  selector:
    app: myinvest
    tier: backend
status:
  loadBalancer: {}
