ingress/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: myinvest
    tier: frontend
  name: frontend
spec:
  ports:
  - name: "80"
    port: 80
  type: ClusterIP
  selector:
    app: myinvest
    tier: frontend
status:
  loadBalancer: {}
